[package]
name = "dofigen"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "A Dockerfile generator using a simplified description in YAML or JSON format create"
repository = "https://github.com/lenra-io/dofigen"
keywords = ["dockerfile", "generator", "yaml", "json"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dofigen_lib"
path = "src/lib.rs"

[[bin]]
name = "dofigen"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["permissive", "cli"]
cli = ["clap"]
json_schema = ["schemars", "serde_json"]
permissive = []
strict = []

[dependencies]
serde = "1.0"
serde_yaml = "0.9.34"
serde_json = { version = "1.0.120", optional = true }
thiserror = "1.0.61"
clap = { version = "4.5", features = ["derive"], optional = true }
schemars = { version = "0.8.21", optional = true, features = ["url"] }
regex = "1.10.5"
url = { version = "2.5.2", features = ["serde"] }
concat-idents = "1.1.5"
struct-patch = { version = "0.8.3", default-features = false, features = ["option", "merge"] }
reqwest = { version = "0.12.5", features = ["json", "blocking", "native-tls-vendored"] }
relative-path = "1.9.3"
sha256 = { version = "1.5.0", default-features = false }
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
escargot = "0.5.12"
httptest = "0.16.1"
lazy_static = "1.5.0"
pretty_assertions_sorted = "1.2.3"
