[package]
name = "dofigen"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "A Dockerfile generator using a simplified description in YAML or JSON format create"
repository = "https://github.com/lenra-io/dofigen"
keywords = ["dockerfile", "generator", "yaml", "json"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dofigen_lib"
path = "src/lib.rs"

[[bin]]
name = "dofigen"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "permissive"]
cli = ["clap"]
json_schema = ["schemars", "serde_json"]
permissive = []
strict = []

[dependencies]
serde = "1.0"
serde_yaml = "0.9.34"
serde_json = { version = "1.0.138", optional = true }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"], optional = true }
schemars = { version = "0.8.21", optional = true, features = ["url"] }
regex = "1.11.1"
url = { version = "2.5.4", features = ["serde"] }
struct-patch = { version = "=0.10.3", default-features = false, features = ["option", "merge"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
relative-path = "1.9.3"
sha256 = { version = "1.5.0", default-features = false }
colored = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
escargot = "0.5.13"
httptest = "0.16.1"
lazy_static = "1.5.0"
predicates = "3.1.3"
pretty_assertions_sorted = "1.2.3"

[profile.release]
# source: https://lafor.ge/http-smol/#rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
